[gd_scene load_steps=2 format=3 uid="uid://dkgmjsvh14cop"]

[ext_resource type="Script" uid="uid://8kc8jiuipg0t" path="res://scenes/components/nav_component.gd" id="1_xphd5"]

[node name="NavComponent" type="NavigationAgent2D"]
path_postprocessing = 1
simplify_path = true
simplify_epsilon = 1.0
debug_enabled = true
script = ExtResource("1_xphd5")

[node name="NavTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="NavTimer" to="." method="_on_nav_timer_timeout"]
